2011-01-29  John W. Eaton  <jwe@octave.org>

	* Makefile.am (__fltk_uigetfile__): Use the same compiler flags
	as for __init_fltk__.

2011-01-28  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/eigs.cc (Feigs): Assume we have ARPACK.
	Use "test" instead of "testif HAVE_ARPACK".
	* toplev.cc (octave_config_info): Remove ARPACK_CPPFLAGS,
	ARPACK_LDFLAGS, ARPACK_LIBS from the struct.
	* oct-conf.h.in (OCTAVE_CONF_ARPACK_CPPFLAGS,
	OCTAVE_CONF_ARPACK_LDFLAGS, OCTAVE_CONF_ARPACK_LIBS):
	Delete #defines.

2011-01-28  Kai Habel  <kai.habel@gmx.de>

	* DLD-FUNCTIONS/__fltk_uigetfile__.cc: File filter value is 1-based
now.

2011-01-28  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (Foutput_max_field_width): Set internal variable
	output_max_field_width, not output_precision.

2011-01-28  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (Fformat, Ffixed_point_format, Foutput_precision,
	Foutput_max_field_width, Fsplit_long_rows, Fprint_empty_dimensions):
	Update @seealso lists.

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* graphics.cc: Improve reset docstring.

2011-01-27  Kai Habel  <kai.habel@gmx.de>

	* DLD-FUNCTIONS/__init_fltk__.cc (__fltk_uigetfile__): Remove here.
	* DLD-FUNCTIONS/__fltk_uigetfile__.cc: New file. 
	* DLD-FUNCTIONS/module-files: Add __fltk_uigetfile__.cc.
	Bug #32190.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/dlmread.cc (Fdlmread): Skip leading whitespace
	on each line.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* ov-struct.cc (octave_struct::subsasgn,
	octave_scalar_struct::subsasgn): Call undef_subsasgn on object
	returned by octave_value::empty_conv if LHS is initially undefined.
	Bug #32242.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* input.cc (input_event_hook): Fix incorrect use of iterator.
	Reported by Pascal Dupuis <Pascal.Dupuis@worldonline.be>.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* ov-class.cc (octave_class::reconstruct_exemplar):
	Call constructor with do_multi_index_op instead of feval.